[package]
name = "books-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
json = "0.12.4"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
chrono = { version = "0.4.24", features = [ "serde" ] }